[build-system]
requires = [
  "setuptools >= 61.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "ostream"
version = "0.0.1"
authors = [
  {name="Alex Kwiatkowski", email="alex+pypi@fremantle.io"},
]
description = "Object storage streams for python"
readme = "README.md"
requires-python = ">= 3.12"
license = {text = "MIT License"}
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]
dependencies = [
    "obstore >=0.5.0",
]

[project.urls]
Homepage = "https://github.com/rupurt/ostream"
Issues = "https://github.com/rupurt/ostream/issues"

[tool.setuptools]
license-files = []

[tool.pdm.dev-dependencies]
lint = [
    "ruff >=0.3.4",
    "pyright >=1.1.0",
]
test = [
    "pygments >=2.17.0",
    "pyhamcrest >=2.1.0",
    "pytest >=8.1.0",
    "pytest-asyncio >=0.23.0",
    "pytest-cov >=5.0.0",
    "pytest-recording >=0.13.1",
    "pytest-unordered >=0.6.0",
    "pytest-watcher >=0.4.0",
]
dist = [
    "build >=1.2.1",
    "twine >=5.0.0",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.pytest.ini_options]
markers = []
filterwarnings = []
# Future versions of pytest-asyncio will default the loop scope for asynchronous fixtures to function scope
asyncio_default_fixture_loop_scope = "function"
